White noise: cleanup and small improvements